# text-transformer

./: README.rst  app.py  app.spec  pyproject.toml
data/tkui/: mainwindow.ui
data/webui/: index.html
data/webui/css/: pylon.css
tests/: test_text_transformer.py
tests/transformers/: test_jumble.py  test_leetify.py  test_ransomize.py  test_silence.py
text_transformer/: __init__.py  __main__.py  app.py  text_transformer.py
text_transformer/config/: __init__.py
text_transformer/frontends/cli/: __init__.py  cli.py
text_transformer/frontends/tkui/: __main__.py  tkui.py
text_transformer/frontends/webui/: __init__.py  __main__.py  webui.py
text_transformer/tkui/: __init__.py
text_transformer/transformers/: __init__.py  jumble.py  leetify.py  ransomize.py  silence.py
text_transformer/webui/: webui.py
text_transformer/webui/web/css/: app.css
