[tool.poetry]
name = "text-transformer"
version = "0.1.0"
description = "Transform text in various creative ways"
authors = ["Stelios Karabasakis <skarabasakis@gmail.com>"]
include = [
    { path = 'data', format = 'sdist' },
    { path = 'data', format = 'wheel' }
]


[tool.poetry.dependencies]
python = "^3.8"
Eel = "^0.14.0"
pygubu = "^0.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyinstaller = "^4.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
